Допилил проект, приступаем к тестированию

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -11,4 +11,9 @@
         <servlet-name>ru.webGenerator.WebGenerator WebGeneratorService</servlet-name>
         <url-pattern>/WebGenerator/WebGeneratorService</url-pattern>
     </servlet-mapping>
+
+
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+    </welcome-file-list>
 </web-app>
